--- a/index.html
+++ b/index.html
@@ -1,52 +1,34 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Week-9 : JavaScript week 9 lab" />
+<head>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <title>Bar Graph</title>
 
-    <title>Week-9</title>
-  </head>
+  <style>
+	canvas {
+		border: 1px solid black;
+	}
+  </style>
 
-  <body>
+</head>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/StephenMcCormick/week-9">View on GitHub</a>
+<body>
 
-          <h1 id="project_title">Week-9</h1>
-          <h2 id="project_tagline">JavaScript week 9 lab</h2>
+    <div align="center">
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/StephenMcCormick/week-9/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/StephenMcCormick/week-9/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+        <h2>Population</h2>
+
+        <canvas id="can" height="400" width="650">
+
+        </canvas>
+
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a name="week-9" class="anchor" href="#week-9"><span class="octicon octicon-link"></span></a>week-9</h1>
+	
+	
+	  <script type="text/javascript" src="week-9-lab.js"></script>
+</body>
 
-<p>JavaScript week 9 lab</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Week-9 maintained by <a href="https://github.com/StephenMcCormick">StephenMcCormick</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
 </html>
+
